--- a/newsfilter.ipynb
+++ b/newsfilter.ipynb
@@ -239,6 +239,395 @@
     "## [サンプル] sklearnでナイーブベイズによるテキスト分類にチャレンジ\n",
     "http://qiita.com/kotaroito/items/76a505a88390c5593eba"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>flg</th>\n",
+       "      <th>date</th>\n",
+       "      <th>url</th>\n",
+       "      <th>word1</th>\n",
+       "      <th>word2</th>\n",
+       "      <th>word3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2017/02/20</td>\n",
+       "      <td>url1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2017/02/21</td>\n",
+       "      <td>url2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2017/02/21</td>\n",
+       "      <td>url3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2017/02/21</td>\n",
+       "      <td>url4</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   flg        date   url  word1  word2  word3\n",
+       "0    0  2017/02/20  url1    1.0    2.0    1.0\n",
+       "1    0  2017/02/21  url2    1.0    0.0    0.0\n",
+       "2    1  2017/02/21  url3    2.0    0.0    1.0\n",
+       "3    1  2017/02/21  url4    2.0    1.0    2.0"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "trset=pd.read_csv(\"in_tr.csv\",  header=None, skiprows=1, names=['flg','date','url','word1','word2','word3']).fillna(0)\n",
+    "trset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    0\n",
+       "1    0\n",
+       "2    1\n",
+       "3    1\n",
+       "Name: flg, dtype: int64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flags=trset['flg']\n",
+    "flags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>word1</th>\n",
+       "      <th>word2</th>\n",
+       "      <th>word3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   word1  word2  word3\n",
+       "0    1.0    2.0    1.0\n",
+       "1    1.0    0.0    0.0\n",
+       "2    2.0    0.0    1.0\n",
+       "3    2.0    1.0    2.0"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datas=trset.ix[:,3:]\n",
+    "datas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>wd1</th>\n",
+       "      <th>wd2</th>\n",
+       "      <th>wd3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   wd1  wd2  wd3\n",
+       "0  0.0  1.0  1.0\n",
+       "1  1.0  1.0  0.0\n",
+       "2  2.0  0.0  2.0\n",
+       "3  2.0  1.0  1.0"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "testset=pd.read_csv(\"in_test.csv\").fillna(0)\n",
+    "testdatas=testset.ix[:,2:]\n",
+    "testdatas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1\n",
+       "1    0\n",
+       "2    1\n",
+       "3    1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.naive_bayes import BernoulliNB\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "\n",
+    "\n",
+    "#clf = GaussianNB() # 正規分布を仮定したベイズ分類\n",
+    "clf = BernoulliNB() # ベルヌーイ分布を仮定したベイズ分類\n",
+    "#clf = MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True) # 多項分布を仮定したベイズ分類\n",
+    "\n",
+    "clf.fit(datas, flags) # 学習をする\n",
+    "res=clf.predict(testdatas)\n",
+    "pd.Series(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>flg</th>\n",
+       "      <th>date</th>\n",
+       "      <th>url</th>\n",
+       "      <th>word1</th>\n",
+       "      <th>word2</th>\n",
+       "      <th>word3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2017/02/20</td>\n",
+       "      <td>url1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2017/02/21</td>\n",
+       "      <td>url2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017/02/21</td>\n",
+       "      <td>url3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017/02/21</td>\n",
+       "      <td>url4</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   0  flg        date   url  word1  word2  word3\n",
+       "0  1    0  2017/02/20  url1    1.0    2.0    1.0\n",
+       "1  0    0  2017/02/21  url2    1.0    0.0    0.0\n",
+       "2  1    1  2017/02/21  url3    2.0    0.0    1.0\n",
+       "3  1    1  2017/02/21  url4    2.0    1.0    2.0"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.concat([pd.Series(res),trset],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 参考URL\n",
+    "\n",
+    "* Naive Bayes\n",
+    "http://qiita.com/ynakayama/items/ca3f5e9d762bbd50ad1f\n",
+    "http://universityofbigdata.net/competition/tutorial/5681717746597888\n",
+    "\n",
+    "* python dataframe, pandas\n",
+    "http://sinhrks.hatenablog.com/entry/2015/01/28/073327\n",
+    "http://blog.pepese.com/entry/2016/09/04/144109\n",
+    "http://www.mwsoft.jp/programming/numpy/pandas_csv.html\n",
+    "http://keisanbutsuriya.hateblo.jp/entry/2015/12/16/161410#csvファイルをデータフレームとして読み込む\n",
+    "http://sinhrks.hatenablog.com/entry/2014/11/12/233216\n"
+   ]
   }
  ],
  "metadata": {
